# HaliteSuperSmartBot

./: .gitignore  CMakeLists.txt  doc.md
hlt/: player.hpp  position.hpp
src/: ActionNodes.cpp  ActionNodes.h  BehaviourTree.cpp  BehaviourTree.h  InputNode.cpp  InputNode.h  MainBehaviour.cpp  MainBehaviour.h  MyBot.cpp  PointOfInterest.cpp  PointOfInterest.h
src/AiNodes/: ExploitPoi.cpp  ExploitPoi.h  ExploitPosition.cpp  ExploitPosition.h
